--- a/Computer.html
+++ b/Computer.html
@@ -21,13 +21,24 @@
 <div class='subheader'>
 </div>
 <div id='toc'>
-<ul class='toc'><li class='toc1'><a href='#Module'>Module</a></li>
+<ul class='toc'><li class='toc1'><a href='#Latest'>Latest</a></li>
+<ul class='toc'><li class='toc2'><a href='#Project%20Proposals'>Project Proposals</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Class%20Presentations'>Class Presentations</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Extra%20Sessions'>Extra Sessions</a></li>
+<ul class='toc'></ul></ul><li class='toc1'><a href='#Module'>Module</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#Register'>Register</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#News'>News</a></li>
 <ul class='toc'><li class='toc2'><a href='#Talks'>Talks</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Events'>Events</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
-<ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Module'>Module</a></h2>
+<ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
+<h3><a class='anchor' name='Project%20Proposals'>Project Proposals</a></h3>
+
+<p>You will have to write a <strong>project proposal</strong> per group for your <strong>final project</strong>. The proposal will be approximately a page long (A4) and it should include a list of group members (full names please) and a brief summary of the project you wish to undertake. It doesn't matter if you slightly change your project later - this is just for me to get an idea of what to expect so that I can advise and support you.<div class='note'><span class='notelabel'>NOTE:</span> You will need to send me the proposal via email before <strong>Friday, 10 February</strong>.</div><h3><a class='anchor' name='Class%20Presentations'>Class Presentations</a></h3>
+
+<p>I have decided to postpone the <strong>class presentations</strong> a few days because of the session I had to cancel this week due to illness. Instead of them happening on the 10 and 14 of February, now they will be on the 14 and 17 Feb. This will give you a few days extra to prepare. I will send a schedule for the class presentations soon.<div class='note'><span class='notelabel'>NOTE:</span> The <strong>class presentations</strong> will now be happening on the <strong>14 and 17 of February</strong></div><h3><a class='anchor' name='Extra%20Sessions'>Extra Sessions</a></h3>
+
+<p>I will do an extra session on <strong>Tuesday, 21 Februrary</strong> instead of the session that was cancelled this week. In addition, after that date we will have tutorials and troubleshooting sessions.<div class='note'><span class='notelabel'>NOTE:</span> We will have an extra teaching session on <strong>Tuesday, 21 Februrary</strong></div><h2><a class='anchor' name='Module'>Module</a></h2>
 <dl>
 <dt>Module Information<dd><ul>
 <li><a href="./Handbook.html">Handbook</a><li><a href="./Handbook.html#Course%20Materials">Course Materials</a><li><a href="./Handbook.html#Module%20Overview">Module Overview</a><li><a href="./Handbook.html#Assessment">Assessment</a><li><a href="./Assignment Brief.html">Assignment Brief</a><li><a href="./moduleplan.htm">Module Plan</a></ul>
