--- a/Classes/Condition.html
+++ b/Classes/Condition.html
@@ -19,24 +19,24 @@
 <div id='summary'>Block the execution of a thread</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/Core/<a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/Core/Condition.sc'>Condition.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Core/Condition.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Core/Condition.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*new'>new</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-test'>test</a> </li>
 <li class='toc3'><a href='#-wait'>wait</a> </li>
 <li class='toc3'><a href='#-hang'>hang</a> </li>
 <li class='toc3'><a href='#-signal'>signal</a> </li>
 <li class='toc3'><a href='#-unhang'>unhang</a> </li>
-<li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 </ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*new' href='./../Overviews/Methods.html#new'>new</a> (<span class='argstr'>test: false</span>)</h3>
 <div class='method'>
-<p>Create a new instance, set the <strong>test</strong> variable.</div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<p>Create a new instance, set the <strong>test</strong> variable.</div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-test' href='./../Overviews/Methods.html#test'>test</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-test' href='./../Overviews/Methods.html#test'>test</a> = value</h3>
@@ -54,7 +54,7 @@ c.unhang;</pre>
 <div class='method'>
 <p>If <a href="#-test">-test</a> is true, reschedule blocked threads.</div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-unhang' href='./../Overviews/Methods.html#unhang'>unhang</a> </h3>
 <div class='method'>
-<p>Resume threads.</div><h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
+<p>Resume threads.</div><h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
 <pre class='code prettyprint lang-sc'>(
 c = Condition.new(false);
@@ -83,7 +83,7 @@ c.test = true;
 c.signal;
 )
 
-// a typical use is a routine that can pause under certin conditions:
+// a typical use is a routine that can pause under certain conditions:
 (
 c = Condition.new;
 fork { loop { 1.wait; "going".postln; c.wait } };
@@ -133,4 +133,4 @@ fork {
     "This is it.".postln;
 }
 );</pre>
-<div class='doclink'>source: <a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/Condition.schelp'>/Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/Condition.schelp</a><br>link::Classes/Condition::<br>sc version: 3.7.2</div></div></body></html>
+<div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Condition.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Condition.schelp</a><br>link::Classes/Condition::<br>sc version: 3.8.0</div></div></body></html>
