--- a/Classes/Convolution2.html
+++ b/Classes/Convolution2.html
@@ -7,7 +7,6 @@
 <script src='./../docmap.js' type='text/javascript'></script>
 <script src='./../prettify.js' type='text/javascript'></script>
 <script src='./../lang-sc.js' type='text/javascript'></script>
-<script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='./..';</script>
 </head>
 <ul id='menubar'></ul>
@@ -20,20 +19,21 @@
 <div id='summary'>Real-time fixed kernel convolver.</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/<a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/FFT2.sc'>FFT2.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/FFT2.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/FFT2.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/Convolution.html">Convolution</a>, <a href="./../Classes/Convolution2L.html">Convolution2L</a>, <a href="./../Classes/Convolution3.html">Convolution3</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*ar'>ar</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 </ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
 <p>Strict convolution with fixed kernel which can be updated using a trigger signal.
+<p>Internally, this unit uses FFT to accelerate the calculation, which means that (a) you must specify a "framesize", and (b) if the kernel is longer than this framesize, the end of it will be ignored.
 <p>See also <a href="http://www.dspguide.com/ch18.htm">http://www.dspguide.com/ch18.htm</a> by Steven W. Smith.<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*ar' href='./../Overviews/Methods.html#ar'>ar</a> (<span class='argstr'>in</span>, <span class='argstr'>kernel</span>, <span class='argstr'>trigger: 0</span>, <span class='argstr'>framesize: 2048</span>, <span class='argstr'>mul: 1</span>, <span class='argstr'>add: 0</span>)</h3>
 <div class='method'>
@@ -41,11 +41,11 @@
 <table class='arguments'>
 <tr><td class='argumentname'>in<td class='argumentdesc'>
 <p>Processing target.<tr><td class='argumentname'>kernel<td class='argumentdesc'>
-<p>Buffer index for the fixed kernel, may be modulated in combination with the trigger.<tr><td class='argumentname'>trigger<td class='argumentdesc'>
+<p>Buffer index for the fixed kernel, may be modulated in combination with the trigger. It's size must be &lt;= framesize.<tr><td class='argumentname'>trigger<td class='argumentdesc'>
 <p>Update the kernel on a change from non-positive to positive value.<tr><td class='argumentname'>framesize<td class='argumentdesc'>
-<p>Size of FFT frame, must be a power of two. Convolution uses twice this number internally, maximum value you can give this argument is 2^16 = 65536. Note that it gets progressively more expensive to run for higher powers! 512, 1024, 2048, 4096 standard.<tr><td class='argumentname'>mul<td class='argumentdesc'><tr><td class='argumentname'>add<td class='argumentdesc'></table></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<p>Size of FFT frame, must be a power of two (512, 1024, 2048, 4096 are standard choices). Convolution uses twice this number internally. Note that the convolution gets progressively more expensive to run for higher powers! The maximum value you can use is 2^16=16384. (This upper limit is half of "SC_FFT_MAXSIZE" defined in the SC source code.) Larger convolutions than this can be done using <a href="./../Classes/PartConv.html">PartConv</a>.<tr><td class='argumentname'>mul<td class='argumentdesc'><tr><td class='argumentname'>add<td class='argumentdesc'></table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
 <pre class='code prettyprint lang-sc'>( // allocate three buffers
 b = Buffer.alloc(s,2048);
@@ -72,7 +72,7 @@ SynthDef( "conv-test", { arg kernel, trig=0;
 
     //must have power of two framesize
     Out.ar(0,Convolution2.ar(input,kernel,trig,2048, 0.5));
-}).send(s)
+}).add
 
 )
 
@@ -160,7 +160,7 @@ b.sine1(1.0/[1,2,3,4,5,6], true, true, true);
 
 )</pre>
 
-<p>Instead of triggering the kernel update yourself, as in the first example, you can use a UGen trigger signal to do so. In the next example, we use two Convolution2 UGens in order to continuously and smoothly change the impulse response: <a href="./../Classes/RecordBuf.html">RecordBuf</a> is used to record a random frequency <a href="./../Classes/Saw.html">Saw</a> oscillator every <code class='code prettyprint lang-sc'>trigPeriod</code> seconds. Right after the recording (trigPeriod gets delayed by the buffer duration <a href="./../Classes/BufDur.html">BufDur</a>, using the <a href="./../Classes/TDelay.html">TDelay</a> UGen) the two convolution UGens alternatingly update their kernels (using two triggers convTrigs). At the frequency of the kernel updates a crossfader <a href="./../Classes/XFade2.html">XFade2</a> moves between conv1 and conv2, using a triangle oscillator <a href="./../Classes/LFTri.html">LFTri</a> at half the trigger frequency as a panning input. The result is a constantly shifting spectral colorization of the Dust impulses:<pre class='code prettyprint lang-sc'>b = Buffer.alloc( s, 2048, 1, _.zeroMsg );
+<p>Instead of triggering the kernel update yourself, as in the first example, you can use a UGen trigger signal to do so. In the next example, we use two Convolution2 UGens in order to continuously and smoothly change the impulse response: <a href="./../Classes/RecordBuf.html">RecordBuf</a> is used to record a random frequency <a href="./../Classes/Saw.html">Saw</a> oscillator every <code class='code prettyprint lang-sc'>trigPeriod</code> seconds. Right after the recording (trigPeriod gets delayed by the buffer duration <a href="./../Classes/BufDur.html">BufDur</a>, using the <a href="./../Classes/TDelay.html">TDelay</a> UGen) the two convolution UGens alternatively update their kernels (using two triggers convTrigs). At the frequency of the kernel updates a crossfader <a href="./../Classes/XFade2.html">XFade2</a> moves between conv1 and conv2, using a triangle oscillator <a href="./../Classes/LFTri.html">LFTri</a> at half the trigger frequency as a panning input. The result is a constantly shifting spectral colorization of the Dust impulses:<pre class='code prettyprint lang-sc'>b = Buffer.alloc( s, 2048, 1, _.zeroMsg );
 (
     x = { arg i_kernel, density = 100, trigPeriod = 5.0, cutOff = 1000, minFreq = 200, maxFreq = 2000;
         var input, trigFreq, recTrig, irSig, convTrig, convTrigs, bufFrames, conv1, conv2;
@@ -185,4 +185,4 @@ b.sine1(1.0/[1,2,3,4,5,6], true, true, true);
 x.set( \trigPeriod, 0.1 );    // fast changes
 x.set( \trigPeriod, 10.0 );    // slow changes
 x.free;    // delete synth</pre>
-<div class='doclink'>source: <a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/Convolution2.schelp'>/Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/Convolution2.schelp</a><br>link::Classes/Convolution2::<br>sc version: 3.5.5</div></div></body></html>
+<div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Convolution2.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Convolution2.schelp</a><br>link::Classes/Convolution2::<br>sc version: 3.8.0</div></div></body></html>
