--- a/Classes/PlayBuf.html
+++ b/Classes/PlayBuf.html
@@ -7,7 +7,6 @@
 <script src='./../docmap.js' type='text/javascript'></script>
 <script src='./../prettify.js' type='text/javascript'></script>
 <script src='./../lang-sc.js' type='text/javascript'></script>
-<script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='./..';</script>
 </head>
 <ul id='menubar'></ul>
@@ -20,16 +19,16 @@
 <div id='summary'>Sample playback oscillator.</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 3.5.5/SuperCollider 3.5.5.app/Contents/Resources/SCClassLibrary/Common/Audio/<a href='file:///Applications/SuperCollider 3.5.5/SuperCollider 3.5.5.app/Contents/Resources/SCClassLibrary/Common/Audio/BufIO.sc'>BufIO.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/MultiOutUGen.html">MultiOutUGen</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/BufIO.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/BufIO.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/MultiOutUGen.html">MultiOutUGen</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/RecordBuf.html">RecordBuf</a>, <a href="./../Classes/DiskIn.html">DiskIn</a>, <a href="./../Classes/BufRd.html">BufRd</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*ar'>ar</a>  <a href='#*kr'>kr</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 </ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
@@ -40,15 +39,15 @@
 <p><h4>Arguments:</h4>
 <table class='arguments'>
 <tr><td class='argumentname'>numChannels<td class='argumentdesc'>
-<p>Number of channels that the buffer will be. This must be a fixed integer. The architechture of the SynthDef cannot change after it is compiled.<tr><td class='argumentname'>bufnum<td class='argumentdesc'>
-<p>The index of the buffer to use.<div class='warning'><span class='warninglabel'>WARNING:</span> If you supply a bufnum of a buffer with a differing number of channels than the one specified in this PlayBuf, it will fail silently.</div><tr><td class='argumentname'>rate<td class='argumentdesc'>
+<p>Number of channels that the buffer will be. This must be a fixed integer. The architecture of the SynthDef cannot change after it is compiled.<tr><td class='argumentname'>bufnum<td class='argumentdesc'>
+<p>The index of the buffer to use.<div class='note'><span class='notelabel'>NOTE:</span> If you supply a bufnum of a buffer with a differing number of channels than the one specified in this PlayBuf, it will post a warning and output the channels it can.</div><tr><td class='argumentname'>rate<td class='argumentdesc'>
 <p>1.0 is the server's sample rate, 2.0 is one octave up, 0.5 is one octave down -1.0 is backwards normal rate… etc. Interpolation is cubic.<tr><td class='argumentname'>trigger<td class='argumentdesc'>
 <p>A trigger causes a jump to the startPos. A trigger occurs when a signal changes from negative value to positive value.<tr><td class='argumentname'>startPos<td class='argumentdesc'>
 <p>Sample frame to start playback.<tr><td class='argumentname'>loop<td class='argumentdesc'>
 <p>1 means true, 0 means false. This is modulateable.<tr><td class='argumentname'>doneAction<td class='argumentdesc'>
-<p>an integer representing an action to be executed when the buffer is finished playing. This can be used to free the enclosing synth, etc. See <a href="./../Reference/UGen-doneActions.html">UGen done-actions</a> for more detail. <code class='code prettyprint lang-sc'>doneAction</code> is only evaluated if loop is 0.</table></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<p>an integer representing an action to be executed when the buffer is finished playing. This can be used to free the enclosing synth, etc. See <a href="./../Reference/UGen-doneActions.html">UGen done-actions</a> for more detail. <code class='code prettyprint lang-sc'>doneAction</code> is only evaluated if loop is 0.</table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
 <pre class='code prettyprint lang-sc'>s.boot // Boot the server, if you need to
 
@@ -131,4 +130,4 @@ SynthDef(\help_PlayBuf, {| out = 0, bufnum = 0 |
 }).play(s, [\out, 0, \bufnum, b]);
 
 b.free;</pre>
-<div class='doclink'>source: <a href='file:///Applications/SuperCollider 3.5.5/SuperCollider 3.5.5.app/Contents/Resources/HelpSource/Classes/PlayBuf.schelp'>/Applications/SuperCollider 3.5.5/SuperCollider 3.5.5.app/Contents/Resources/HelpSource/Classes/PlayBuf.schelp</a><br>link::Classes/PlayBuf::<br>sc version: 3.5.5</div></div></body></html>
+<div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/PlayBuf.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/PlayBuf.schelp</a><br>link::Classes/PlayBuf::<br>sc version: 3.8.0</div></div></body></html>
