--- a/Classes/TGrains.html
+++ b/Classes/TGrains.html
@@ -7,7 +7,6 @@
 <script src='./../docmap.js' type='text/javascript'></script>
 <script src='./../prettify.js' type='text/javascript'></script>
 <script src='./../lang-sc.js' type='text/javascript'></script>
-<script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='./..';</script>
 </head>
 <ul id='menubar'></ul>
@@ -20,21 +19,21 @@
 <div id='summary'>Buffer granulator.</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/<a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/BufIO.sc'>BufIO.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/MultiOutUGen.html">MultiOutUGen</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/BufIO.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/BufIO.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/MultiOutUGen.html">MultiOutUGen</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*ar'>ar</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 </ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
 <p>Triggers generate grains from a buffer. Each grain has a Hanning envelope<pre class='code prettyprint lang-sc'>(sin2(x) for x from 0 to π)</pre>
 
-<p>and is panned between two channels of multiple outputs.<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
+<p>and can be panned over multichannel output.<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*ar' href='./../Overviews/Methods.html#ar'>ar</a> (<span class='argstr'>numChannels</span>, <span class='argstr'>trigger: 0</span>, <span class='argstr'>bufnum: 0</span>, <span class='argstr'>rate: 1</span>, <span class='argstr'>centerPos: 0</span>, <span class='argstr'>dur: 0.1</span>, <span class='argstr'>pan: 0</span>, <span class='argstr'>amp: 0.1</span>, <span class='argstr'>interp: 4</span>)</h3>
 <div class='method'>
 <p><h4>Arguments:</h4>
@@ -47,19 +46,15 @@
 <p>1.0 is normal, 2.0 is one octave up, 0.5 is one octave down -1.0 is backwards normal rate… etc.<tr><td class='argumentname'>centerPos<td class='argumentdesc'>
 <p>The position in the buffer in seconds at which the grain envelope will reach maximum amplitude.<tr><td class='argumentname'>dur<td class='argumentdesc'>
 <p>Duration of the grain in seconds.<tr><td class='argumentname'>pan<td class='argumentdesc'>
-<p>A value from -1 to 1. Determines where to pan the output in the same manner as <a href="./../Classes/PanAz.html">PanAz</a> .<tr><td class='argumentname'>amp<td class='argumentdesc'>
+<p>determines where to pan the output.<ul>
+<li>If numChannels = 1, the pan argument is ignored.<li>If numChannels = 2, panning is similar to Pan2.<li>If numChannels &gt; 2, panning is the same as PanAz.</ul>
+<tr><td class='argumentname'>amp<td class='argumentdesc'>
 <p>Amplitude of the grain.<tr><td class='argumentname'>interp<td class='argumentdesc'>
-<p>1, 2, or 4. Determines whether the grain uses (1) no interpolation, (2) linear interpolation, or (4) cubic interpolation.</table></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<p>1, 2, or 4. Determines whether the grain uses (1) no interpolation, (2) linear interpolation, or (4) cubic interpolation.</table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
-<pre class='code prettyprint lang-sc'>(
-s = Server.internal;
-Server.default = s;
-s.boot;
-)
-
-
+<pre class='code prettyprint lang-sc'>s.boot;
 b = Buffer.read(s, Platform.resourceDir +/+ "sounds/a11wlk01.wav");
 
 (
@@ -194,4 +189,4 @@ b = Buffer.read(s, Platform.resourceDir +/+ "sounds/a11wlk01.wav");
 
 b.free</pre>
 
-<p><div class='doclink'>source: <a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/TGrains.schelp'>/Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/TGrains.schelp</a><br>link::Classes/TGrains::<br>sc version: 3.5.5</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/TGrains.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/TGrains.schelp</a><br>link::Classes/TGrains::<br>sc version: 3.8.0</div></div></body></html>
